--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: gh247_user
+name: gplx
 description: "Giao hang 247 User Mobile App"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -81,3 +81,4 @@ flutter:
   assets:
     - assets/images/
     - assets/jsons/
+    - assets/images/signs/
