--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   awesome_dio_interceptor: ^1.2.0
   cloud_firestore: ^5.6.6
   firebase_core: ^3.13.0
+  firebase_database: ^11.3.1
   uuid: ^4.3.1
 
 dev_dependencies:
