--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_database: ^11.3.1
   uuid: ^4.3.1
+  http: ^1.4.0
+  typed_data: ^1.4.0
 
 dev_dependencies:
   flutter_test:
