--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,6 +4,9 @@ platform :ios, '13.0'
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
+# Prevent Cocoapods from embedding a second Flutter framework
+ENV['DISABLE_PLAYGROUND'] = 'true'
+
 project 'Runner', {
   'Debug' => :debug,
   'Profile' => :release,
@@ -29,15 +32,27 @@ flutter_ios_podfile_setup
 
 target 'Runner' do
   use_frameworks!
+  use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
-  target 'RunnerTests' do
-    inherit! :search_paths
-  end
 end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    
+    # Add the following block for iOS deployment target
+    target.build_configurations.each do |config|
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '13.0'
+      
+      # Enable signing for all pods
+      config.build_settings['CODE_SIGNING_ALLOWED'] = 'YES'
+      config.build_settings['CODE_SIGNING_REQUIRED'] = 'NO'
+      
+      # Add arm64 to excluded architectures for simulators
+      if config.build_settings['PLATFORM_NAME'] == 'iphonesimulator'
+        config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      end
+    end
   end
 end
