--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dev_dependencies:
   mockito: ^5.4.4
   flutter_lints: ^3.0.0
   json_serializable: ^6.8.0
+  flutter_launcher_icons: ^0.14.4
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/logo_vx.jpg"
 
 flutter_gen:
   output: lib/generated/
@@ -58,21 +64,21 @@ flutter_native_splash:
   image: assets/images/logo_vx.jpg
   color_dark: "#121212"
   image_dark: assets/images/logo_vx.jpg
-  
+
   android_12:
     image: assets/images/logo_vx.jpg
     icon_background_color: "#FFFFFF"
     image_dark: assets/images/logo_vx.jpg
     icon_background_color_dark: "#121212"
-    
+
   android: true
   ios: true
   web: false
-  
+
   fullscreen: true
   android_gravity: center
   ios_content_mode: center
-  
+
 # TODO: update localization configuration
 # flutter_intl:
 #   enabled: true # Required. Must be set to true to activate the package. Default: false
