--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,8 @@ jobs:
         with:
           channel: "stable"
           # flutter-version: "3.19.0" # Specify the exact Flutter version
-      - run: make init
+      - run: flutter pub get
+      - run: dart pub run build_runner build --delete-conflicting-outputs
       - run: flutter test
       - run: flutter analyze
       - run: flutter build apk --release
