--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
-          # flutter-version: "3.19.0" # Specify the exact Flutter version
+          flutter-version: "3.32.2" # Specify the exact Flutter version
       - run: flutter pub get
       - run: dart pub run build_runner build --delete-conflicting-outputs
       - run: flutter test
       - run: flutter analyze
-      - run: flutter build apk --release
+      # - run: flutter build apk --release
