--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,10 @@
 name: CI
 
 on:
-  push:
+  pull_request:
     branches:
       - main
+      - develop
 
 jobs:
   build:
@@ -13,13 +14,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
-          # flutter-version: "3.19.0" # Specify the exact Flutter version
-<<<<<<< HEAD
+          flutter-version: "3.32.2" # Specify the exact Flutter version
+
       - run: make init
-=======
-      - run: flutter pub get
->>>>>>> c4161eb (add ci config)
       - run: flutter test
       - run: flutter analyze
       - run: flutter build apk --release
