--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,4 +19,4 @@ jobs:
       - run: make init
       - run: flutter test
       - run: flutter analyze
-      - run: flutter build apk --release
+      # - run: flutter build apk --release
